force-app/main/default/objects/LLC_BI__Covenant_Compliance2__c/fields/LLC_BI__Approved_By__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically calculated. User that approved the review of this Covenant.</description>
    <inlineHelpText>User that approved the review of this Covenant.</inlineHelpText>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Covenant_Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>