force-app/main/default/objects/LLC_BI__Covenant_Compliance2__c/fields/LLC_BI__Associated_Statement_Period_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Associated_Statement_Period_Status__c</fullName>
    <description>This field is automatiaclly populated via a batch job. It identifies whether the covenant compliance record has been associated with a statement period in Spreads.</description>
    <label>Associated Statement Period Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Associated</fullName>
            </value>
            <value>
                <fullName>Unassociated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>