force-app/main/default/objects/LLC_BI__Covenant_Compliance2__c/fields/LLC_BI__Automated_Testing_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Automated_Testing_Status__c</fullName>
    <description>This field is automatically populated via a batch job. It identifies whether the value tested for this covenant compliance passes or fails the rule for this covenant.</description>
    <label>Automated Testing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>