force-app/main/default/objects/LLC_BI__Covenant_Compliance2__c/fields/LLC_BI__Covenant__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant__c</fullName>
    <description>This field is required and is automatically populated. It identifies the Covenant associated to the Covenant Compliance record and is automatically populated when creating a new Covenant Compliance.</description>
    <label>Covenant</label>
    <referenceTo>LLC_BI__Covenant2__c</referenceTo>
    <relationshipName>Covenant_Compliances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>