force-app/main/default/objects/LLC_BI__Covenant_Compliance2__c/fields/LLC_BI__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Due_Date__c</fullName>
    <description>The system automatically populates this optional date field to determine the due date of a covenant. The system adds grace days to statement date to calculate due date. Users can update the due date field to extend the covenant compliance. By default, it is blank.</description>
    <inlineHelpText>This field is initially populated automatically. The user can adjust the date to extend a covenant compliance.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>