force-app/main/default/objects/LLC_BI__Covenant_Compliance2__c/fields/LLC_BI__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Effective_Date__c</fullName>
    <description>This field is automatically populated via trigger. It stores the date of the covenant&apos;s Effecitve Date at the time the covenant compliance is created. The Effective Date is the statement date of the financial statement this covenant is for.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>