force-app/main/default/objects/LLC_BI__Covenant_Compliance2__c/fields/LLC_BI__Evaluated_By__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Evaluated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatic. The user who evaluated this Covenant.</description>
    <inlineHelpText>The user who evaluated this Covenant.</inlineHelpText>
    <label>Evaluated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Covenant_Compliances_Evaluated</relationshipName>
    <type>Lookup</type>
</CustomField>