force-app/main/default/objects/LLC_BI__Covenant_Compliance2__c/fields/LLC_BI__Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Evaluation_Date__c</fullName>
    <description>This field is manually populated. The date this covenant was evaluated.</description>
    <inlineHelpText>The date this covenant was evaluated.</inlineHelpText>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>