force-app/main/default/objects/LLC_BI__Covenant_Compliance2__c/fields/LLC_BI__Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exception_Date__c</fullName>
    <description>This field is automatically calculated. The date the Covenant Compliance record moves to exception.</description>
    <inlineHelpText>If there was an exception, the date that the exception occurred.</inlineHelpText>
    <label>Exception Date</label>
    <type>Date</type>
</CustomField>