force-app/main/default/objects/LLC_BI__Covenant_Compliance2__c/fields/LLC_BI__Original_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Original_Due_Date__c</fullName>
    <description>The system automatically populates this optional date field to determine the due date of a covenant. The system adds grace days to statement date to calculate due date. Users should not change this field. It must maintain the original due date. By default, it is blank.</description>
    <inlineHelpText>This field populates automatically based on the statement date plus grace days. It should not be adjusted.</inlineHelpText>
    <label>Original Due Date</label>
    <type>Date</type>
</CustomField>