force-app/main/default/objects/LLC_BI__Covenant_Compliance2__c/fields/LLC_BI__Proposed_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Proposed_Extension_Date__c</fullName>
    <description>The user populates this optional date field to store a proposed extension date for the covenant compliance. Once approved, the user updates the Due Date field with the extension date. By default, this field is blank.</description>
    <inlineHelpText>Populate this field with a proposed Extension Date for approval. Once approved, update the Due Date field with the extension date.</inlineHelpText>
    <label>Proposed Extension Date</label>
    <type>Date</type>
</CustomField>